fixed contrast errors with background image

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ header{
   grid-column: 1 / span all;
   grid-row: 2 / span 1;
   background-image: url("../images/header.jpg");
+  background-color: black;
 
   /* Your code here */
   /* Set background-image to header.jpg in the images folder */
